Create user login controller

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+# Rename this ".env.example" file to just ".env"
 DB_URI=REPLACE_THIS_WITH_YOUR_MONGODB_URI
 PORT=REPLACE_THIS_WITH_YOUR_DESIRED_PORT
+JWT_SECRET=REPLACE_THIS_WITH_YOUR_DESIRED_JWT_SECRET
+JWT_COOKIE_NAME=REPLACE_THIS_WITH_YOUR_DESIRED_COOKIE_NAME
+
+# Sample values for each variables above
+# DB_URI=mongodb://127.0.0.1:27017/sample-mongo-uri
+# PORT=3001
+# JWT_SECRET=ultimateSecret
+# JWT_COOKIE_NAME=sampleName
