--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-jwt": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.15",
 		"validator": "^13.1.17"
